test/domains/diten/castAwayStridableDomain.5.good
error: IllegalArgumentError: bad cast from stride -1 to strideKind.positive
castAwayStridableDomain.chpl:15: error: halt reached - bad cast from stride -1 to strideKind.positive
